fix: on mobile everything got fix

--- a/src/styles/portfolio.module.css
+++ b/src/styles/portfolio.module.css
@@ -40,7 +40,7 @@
 @media screen and (max-width:768px) {
     .portfolio{
         /* width: 95%; */
-        padding: 20px 0;
+        /* padding: no; */
         background: none;
     }
     .project-container{
