--- a/src/styles/serviceCard.module.css
+++ b/src/styles/serviceCard.module.css
@@ -51,4 +51,7 @@
   .card-subtitle{
     font-size: 14px;
   }
+  .card-container:first-child::before{
+    left: 50%;
+  }
 }
